@@ -10,6 +10,9 @@
   * `options` -> Not needed anymore. Use methods `$.selectOption()` or `$.selectOptionByValue()`.
   * `hasNotClass` -> Use method `$.shouldNotHave(cssClass("abc"))`
 * Remove deprecated class JQuery
+* Remove deprecated method
+  * `Selenide.switchToWindow(title)` -> use method `switchTo().window(title)`
+  * `Selenide.switchToWindow(index)` -> use method `switchTo().window(index)`
 
 
 === 2.25 (Released 30.11.2015)
